--- a/package.json
+++ b/package.json
@@ -65,9 +65,14 @@
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "0.0.11",
     "autoprefixer": "^10.4.5",
+    "msw": "^0.39.2",
+    "msw-storybook-addon": "^1.6.3",
     "postcss": "^8.4.12",
     "react-test-renderer": "^18.1.0",
     "tailwindcss": "^3.0.24",
     "webpack": "^5.72.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
